---
config:
  layout: elk
  look: classic
---

erDiagram
    %% ===============================
    %% ENTIDADES PRINCIPALES
    %% ===============================
    usuario {
        bigint id_usuario PK
        varchar nombre
        varchar numero_telefono UK
        boolean activo
        datetime fecha_registro
    }

    mensaje {
        bigint id_mensaje PK
        bigint id_usuario FK
        text contenido
        varchar direccion
        datetime fecha_envio
    }

    %% ===============================
    %% HÁBITOS
    %% ===============================
    categoria_habito {
        bigint id_categoria PK
        varchar nombre
        datetime fecha_creacion
    }

    habito {
        bigint id_habito PK
        bigint id_usuario FK
        varchar nombre
        bigint id_categoria FK
        text descripcion
        varchar frecuencia
        boolean activo
        datetime fecha_creacion
    }

    registro_habito {
        bigint id_registro PK
        bigint id_habito FK
        date fecha
        text observacion
    }

    %% ===============================
    %% LECTURA
    %% ===============================
    lectura {
        bigint id_lectura PK
        bigint id_usuario FK
        varchar titulo_libro
        varchar autor
        int total_paginas
        date fecha_inicio
        date fecha_fin
        text notas
        boolean terminado
    }

    registro_lectura {
        bigint id_registro PK
        bigint id_lectura FK
        date fecha
        int paginas_leidas
        text observacion
    }

    %% ===============================
    %% FINANZAS
    %% ===============================
    banco {
        int id_banco PK
        varchar nombre_banco
    }

    cuenta_bancaria {
        bigint id_cuenta PK
        bigint id_usuario FK
        int id_banco FK
        varchar nombre_targeta
        varchar tipo_targeta
    }

    categoria_finanza {
        bigint id_categoria PK
        varchar nombre
    }

    transaccion_finanza {
        bigint id_transaccion PK
        bigint id_usuario FK
        bigint id_categoria FK
        bigint id_cuenta FK
        varchar tipo
        int monto
        text descripcion
        datetime fecha
    }

    %% ===============================
    %% ENTRENAMIENTOS
    %% ===============================
    entrenamiento {
        bigint id_entrenamiento PK
        bigint id_usuario FK
        varchar tipo
        varchar subtipo
        datetime fecha
        text observacion
    }

    entrenamiento_aerobico {
        bigint id_aerobico PK
        bigint id_entrenamiento FK
        decimal distancia_km
        time duracion
        decimal ritmo_promedio
        int calorias
    }

    entrenamiento_fuerza {
        bigint id_fuerza PK
        bigint id_entrenamiento FK
        varchar musculo_principal
        text rutina
    }

    ejercicio {
        bigint id_ejercicio PK
        bigint id_fuerza FK
        varchar nombre
        int series
        int repeticiones
        decimal peso_kg
    }

    %% ===============================
    %% RELACIONES
    %% ===============================
    %% Usuario y Mensajes
    usuario ||--o{ mensaje : "envia"

    %% Usuario y Hábitos
    usuario ||--o{ habito : "tiene"
    categoria_habito ||--o{ habito : "clasifica"
    habito ||--o{ registro_habito : "registra"

    %% Usuario y Lectura
    usuario ||--o{ lectura : "realiza"
    lectura ||--o{ registro_lectura : "registra"

    %% Usuario y Finanzas
    usuario ||--o{ cuenta_bancaria : "posee"
    banco ||--o{ cuenta_bancaria : "ofrece"
    cuenta_bancaria ||--o{ transaccion_finanza : "realiza"
    usuario ||--o{ transaccion_finanza : "efectua"
    categoria_finanza ||--o{ transaccion_finanza : "clasifica"

    %% Usuario y Entrenamientos
    usuario ||--o{ entrenamiento : "realiza"
    entrenamiento ||--|| entrenamiento_aerobico : "detalle_aerobico"
    entrenamiento ||--|| entrenamiento_fuerza : "detalle_fuerza"
    entrenamiento_fuerza ||--o{ ejercicio : "contiene"
